# PADrendApplication

./: CMakeLists.txt  PADrend.ekki  PADrendMain.cpp
resources/CommonPresets/: AddFloorShadow.escript  AddHeader.escript  Boeing.escript  BudgetColorRenderer.escript  CodeBlocksUpdater.escript  InspectionState.escript  MeshCreation_EdgeSubdivisionSpheres.escript  MeshCreation_PlatonicSolids.escript  MultiplyScene.escript  PointSizeState.escript
resources/Documentation/Exercise Pyramid/: exercise1_solution.escript  exercise2_solution.escript  exercise3_solution.escript
resources/Installer/: Packaging.cmake
resources/Installer/NSIS_windows/: PADrend.nsi
resources/Shader/: Billboard.fs  Billboard.gs  Billboard.vs  EdgeDetection.fs  EdgeDetection.vs  Reduce.fs  Reduce.vs  Spielerei.fs  Spielerei.shader  Spielerei.vs
resources/Windows/: Resource.rc.in
src/: CMakeLists.txt
